--- a/e-commerce/src/main/resources/application.properties
+++ b/e-commerce/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=8090
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:postgresql://localhost:5432/
+spring.datasource.url=jdbc:postgresql://localhost:5432/ecommercedb-dev
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.jpa.properties.javax.persistence.validation.mode=none
